# pgqueryguard

./: .gitignore  .pre-commit-hooks.yaml  Makefile  README.md  main.py  pyproject.toml
app/llm/: query_improve.py  run.py
checker/: Makefile  README.md  pyproject.toml
checker/db_population/: init.py
checker/src/pgqueryguard/: cli.py
checker/src/pgqueryguard/checkers/: formatters.py  optimizer.py  validator.py
checker/src/pgqueryguard/llm/: api_utils.py  run.py
checker/src/pgqueryguard/outer_database/: advice.py  count_resourses.py  inspect.py
checker/src/pgqueryguard/query_files/: files.py  report.py  report_index.py
checker/src/pgqueryguard/utils/: annotaions.py  parse_config.py  pritty_prints.py
db_population/: docker-compose.yaml
sql_files_examples/: bad.sql  docker-compose.yaml  good.sql  sqlglot_config
src/pgqueryguard/: checker.py  cli.py  formatters.py  optimizer.py  validator.py
src/pgqueryguard/query_files/: files.py
src/pgqueryguard/query_read/: from_file.py
src/pgqueryguard/utils/: annotaions.py  async_run.py  pritty_prints.py
web/: .dockerignore  Docker-compose.yml  Makefile  docker-compose.yml
web/backend/: .dockerignore  Dockerfile  pyproject.toml
web/backend/app/: main.py
web/backend/app/checker/src/pgqueryguard/: __init__.py  cli.py
web/backend/app/checker/src/pgqueryguard/checkers/: optimizer.py
web/backend/app/checker/src/pgqueryguard/outer_database/: inspect.py
web/backend/app/config/: __init__.py  default.py
web/backend/app/endpoints/: __init__.py  doc.py
web/backend/app/ulits/checker/: pyproject.toml
web/backend/app/ulits/checker/src/pgqueryguard/: cli.py
web/backend/app/ulits/checker/src/pgqueryguard/utils/: annotaions.py  pritty_prints.py
web/backend/app/ulits/llm/: api_utils.py  query_improve.py  run.py
web/backend/app/utils/llm/: query_improve.py  report.py  run.py
web/backend/cli/llm_report/: __main__.py
