[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgqueryguard"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "sqlglot>=27.12.0",
    "sqlparse>=0.5.3",
    "typer>=0.17.4",
]

[project.scripts]
pgqueryguard = "pgqueryguard.cli:main"

[tool.setuptools]
package-dir = {"" = "checker/src"}

[tool.setuptools.packages.find]
where = ["checker"]
