[project]
name = "pgqueryguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "psycopg2[binary]>=2.9.10",
    "sqlalchemy>=2.0.43",
    "sqlglot>=27.12.0",
    "sqlparse>=0.5.3",
    "typer>=0.17.4",
]

[project.scripts]
pgqueryguard = "pgqueryguard.cli:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyrefly>=0.31.1",
    "ruff>=0.12.12",
]

[tool.ruff.lint]
extend-select = ["I"]
